<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minichallenge3</name>
  <version>0.0.0</version>
  <description>Minichallenge 3 Package</description>
  <maintainer email="paolo.alfonso.reyes@gmail.com">Paolo Reyes</maintainer>
  <license>MIT</license>

  <depend>python3-numpy</depend>
  <depend>rclpy</depend>
  <depend>ros2launch</depend>
  <depend>geometry_msgs</depend>
  <depend>standard_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-transforms3d</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-pyyaml</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
